wrapper {
    gradleVersion = "9.2.1"
}

subprojects {
    apply plugin: 'java-library'

    group = 'org.learnings.application_name'
    version = '0.0.1-SNAPSHOT'
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}

ext {
    versions = [
            springBoot: "4.0.1"
    ]
}
